name:                GPipe-TextureLoad
version:             1.0.5
cabal-version:       >= 1.18
build-type:          Simple
license:             BSD3
copyright:           Tobias Bexelius
maintainer:          Tobias Bexelius

stability:           Experimental
homepage:            http://www.haskell.org/haskellwiki/GPipe
synopsis:            Load GPipe textures from filesystem
description:         The functions of this package helps loading GPipe textures from file. It is based on the stb-image package, and supports subsets of the JPG, PNG, TGA, BMP and PSD formats.
category:            Graphics
author:              Tobias Bexelius

Library 
  build-depends:   
                   base >= 4.7   && <5,
                   stb-image >=0.2.1 && < 0.3,
                   GPipe >= 1.4.5,
                   bitmap
  hs-source-dirs:  src
  ghc-options:     -Wall
  exposed-modules: Graphics.GPipe.Texture.Load

